--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
             <h1>Palindrome birthday...</h1>
         </header>
 
+        <h2 class="disclaimer-line">
+            Note: This website does not store your birthdate
+        </h2>
+
         <h3 class="input-heading">Enter your birthdate:</h3>
         <input id="input-date" type="date" />
 
