--- a/index.html
+++ b/index.html
@@ -36,13 +36,15 @@
         <footer class="footer-container">
             <h2>Connect with me</h2>
             <div>
-                <a href="https://twitter.com/mohitdhatrak"
+                <a href="https://twitter.com/mohitdhatrak" target="_blank"
                     ><img src="/twitter.svg" alt="" class="small-image-size"
                 /></a>
-                <a href="https://www.linkedin.com/in/mohitdhatrak/"
+                <a
+                    href="https://www.linkedin.com/in/mohitdhatrak/"
+                    target="_blank"
                     ><img src="/linkedin.svg" alt="" class="small-image-size"
                 /></a>
-                <a href="https://github.com/mohitdhatrak"
+                <a href="https://github.com/mohitdhatrak" target="_blank"
                     ><img src="/github.svg" alt="" class="small-image-size"
                 /></a>
             </div>
