added format message

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
             Note: This website does not store your birthdate
         </h2>
 
+        <div class="format-line">
+            This website tests your birthdate in dd/mm/yyyy, mm/dd/yyyy and
+            yyyy/mm/dd format
+        </div>
         <h3 class="input-heading">Enter your birthdate:</h3>
         <input id="input-date" type="date" />
 
