added 3 more palindrome formats

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         </h2>
 
         <div class="format-line">
-            This website tests your birthdate in dd/mm/yyyy, mm/dd/yyyy and
-            yyyy/mm/dd format
+            This website tests your birthdate in dd/mm/yyyy, mm/dd/yyyy,
+            yyyy/mm/dd, dd/mm/yy, mm/dd/yy, yy/mm/dd format
         </div>
         <h3 class="input-heading">Enter your birthdate:</h3>
         <input id="input-date" type="date" />
