--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
             A palindrome is a word, number, phrase, or other sequence of
             characters which reads the same backward as forward, for example
             words such as madam or racecar. There are also numeric palindromes,
-            for example the date 12/02/2021.
+            for example the date 12/02/2021 (in dd/mm/yyyy format) and 12/11/21
+            (in dd/mm/yy format).
         </div>
 
         <footer class="footer-container">
